fix summaryText width on mobile

--- a/apps/portfolio/src/components/Sections/AboutMe/AboutMe.module.scss
+++ b/apps/portfolio/src/components/Sections/AboutMe/AboutMe.module.scss
@@ -17,7 +17,10 @@
 
 .summaryText {
   flex: 7;
-  min-width: 400px;
+
+  @media only screen and (min-width: 426) {
+    min-width: 400px;
+  }
 }
 
 .summaryInfo {
